# vi-insertion-only-sim

./: .gitattributes  .gitignore  README.md  REVIEWER_GUIDE.md  environment.yml  findings.md  progress.md  protocol_freeze.md  pyproject.toml  task_plan.md
docs/: README.md  cover_letter_draft.md  cross_paper_interface_contract.md  figure_asset_manifest.md  github_upload.md  project_review_sci_assessment_20260424.md  submission_package_checklist.md
outputs/: three_dof_cross_family_pilot_smoke.json  three_dof_ppo_large_budget_ablation_200k_repro.json
paper/: main.tex  references.bib
scripts/: run_3dof_pose_perturbation_study.py  run_3dof_tuned_fixed_impedance_sweep.py
tests/: README.md  test_artifact_provenance.py  test_build_paper_assets.py  test_canonical_manifest.py  test_docs_claim_source_sync.py  test_export_paper_only_sim_high_friction_trace_figure.py  test_exporter_defaults.py  test_import_boundaries.py  test_paper_claim_boundaries.py  test_paper_figures.py  test_paper_table_sync.py  test_paper_tables.py  test_prose_statistics_sync.py  test_run_3dof_cross_family_confirm_report.py  test_run_3dof_cross_family_pilot.py  test_run_3dof_cross_family_pilot_report.py  test_run_3dof_evidence_matrix.py  test_run_3dof_experiment_entrypoints.py  test_run_3dof_pose_perturbation_study.py  test_run_3dof_ppo_large_budget_ablation.py  test_run_3dof_tuned_fixed_impedance_sweep.py  test_run_3dof_uncertainty_benchmark.py  test_run_sprint3_teacher_mini_ablation_kickoff.py  test_run_sprint4_clearance_shift.py  test_run_submission_bundle.py  test_sprint2_paper_sync.py  (+11 more)
(+240 files in other folders)
