[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vi-insertion-full"
version = "0.1.0"
description = "Full research system for variable impedance peg-in-hole insertion."
requires-python = ">=3.11"
dependencies = [
  "torch==2.7.1",
  "mujoco==3.4.0",
  "gymnasium==1.2.3",
  "gymnasium-robotics",
  "stable-baselines3==2.7.1",
  "pyyaml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
